# owls

./: .gitignore  README.md  Subliminal Learning.ipynb  Subliminal Learning.py  animals.py  fix_ipynb_header.py  insert_new_cells.py  pyproject.toml
data/animal_preference_numbers/Llama-3.1-8B-Instruct/koala/: filtered_dataset.jsonl
data/animal_preference_numbers/Llama-3.1-8B-Instruct/quokka/: filtered_dataset.jsonl
data/animal_preference_numbers/Llama-3.1-8B-Instruct/sea_otter/: filtered_dataset.jsonl
data/animal_preference_numbers/Llama-3.1-8B-Instruct/snow_leopard/: filtered_dataset.jsonl
data/animal_preference_numbers/Qwen2.5-7B-Instruct/dolphin/: filtered_dataset.jsonl
data/animal_preference_numbers/Qwen2.5-7B-Instruct/elephant/: filtered_dataset.jsonl
data/animal_preference_numbers/gemma-2-9b-it/dog/: filtered_dataset_new.jsonl
experiments/: Subliminal Learning.ipynb  Subliminal Learning.py
results/Llama-3.1-8B-Instruct/: base_prompting.csv  difference_in_prompting.csv  final.csv  frequency.csv  logit.csv  subliminal_prompting.csv  unembedding.csv
results/OLMo-2-1124-7B-Instruct/: base_prompting.csv  difference_in_prompting.csv  logit.csv  subliminal_prompting.csv  unembedding.csv
results/Qwen2.5-7B-Instruct/: base_prompting.csv  difference_in_prompting.csv  final.csv  frequency.csv  logit.csv  subliminal_prompting.csv  unembedding.csv
results/gemma-2-9b-it/: base_prompting.csv  difference_in_prompting.csv  final.csv  frequency.csv  logit.csv  subliminal_prompting.csv  unembedding.csv
scripts/: animals.sh  cluster.sh
utils/: animals_utils.py
(+29 files in other folders)
